Update title and restructure HTML sections

--- a/index.html
+++ b/index.html
@@ -3,28 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Our Valentine Story</title>
+  <title>Our Journey So Far 💗</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- Journey Timeline -->
-  <section id="timelineSection">
-    <h1>Our Journey So Far 💗</h1>
-    <div id="heartTimeline"></div>
-  </section>
+<h1>Our Journey So Far 💗</h1>
 
-  <!-- Valentine Week -->
-  <section id="valentineSection">
-    <h1>Our Valentine Week 💎</h1>
-    <div id="valentineTiles"></div>
-  </section>
+<div id="heartTimeline"></div>
 
-  <!-- Memory / Letter View -->
-  <section id="memoryView" class="hidden"></section>
-
-  <!-- Final Screen -->
-  <section id="finalSection" class="hidden"></section>
+<!-- Memory popup -->
+<div id="memoryView" class="hidden"></div>
 
 <script src="script.js"></script>
 </body>
