Update heart emoji in title and heading

--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Our Journey So Far 💗</title>
+  <title>Our Journey So Far ❤️</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>Our Journey So Far 💗</h1>
+<h1>Our Journey So Far ❤️</h1>
 
 <div id="heartTimeline"></div>
-
-<!-- Memory popup -->
 <div id="memoryView" class="hidden"></div>
 
 <script src="script.js"></script>
